static/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
spec:
  ingressClassName: istio
  rules:
  - host: harbor.tpinf.xyz
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: my-harbor-core
            port:
              number: 80
      - path: /c/
        pathType: Prefix
        backend:
          service:
            name: my-harbor-core
            port:
              number: 80
      - path: /service/
        pathType: Prefix
        backend:
          service:
            name: my-harbor-core
            port:
              number: 80
      - path: /v2/
        pathType: Prefix
        backend:
          service:
            name: my-harbor-core    # ← back to core for auth
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-harbor-portal
            port:
              number: 80
