static/kong-ingress.yaml
# echo-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-route
  namespace: demo
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /echo
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
---
# httpbin-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-route
  namespace: demo
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /httpbin
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
